test/asm/nested-brackets.err
error: nested-brackets.asm(5):
    Missing }
Assembly aborted with 1 error!
