test/asm/nested-brackets.asm
def STRING equs "OK"
def WRAPPER equs "TRIN"
	PRINTLN "{S{WRAPPER}G}"

	PRINTLN "{S{WRAPPER}G"
